--- a/releasenotes/notes/auto-mtls-headless.yaml
+++ b/releasenotes/notes/auto-mtls-headless.yaml
@@ -5,4 +5,4 @@ issue:
 - 24319
 releaseNotes:
 - |
-  **Fixed** an issue where headless services without sidecars were incorrectly sent mTLS rtaffic
+  **Fixed** an issue where headless services without sidecars were incorrectly sent mTLS traffic
